# ChangeLog for app-accessibility/java-access-bridge
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/java-access-bridge/ChangeLog,v 1.52 2012/05/21 23:17:23 vapier Exp $

  21 May 2012; Mike Frysinger <vapier@gentoo.org>
  java-access-bridge-1.24.2.ebuild, java-access-bridge-1.26.0.ebuild,
  java-access-bridge-1.6.0-r2.ebuild:
  Inherit eutils for epatch.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org>
  java-access-bridge-1.6.0.ebuild, java-access-bridge-1.6.0-r2.ebuild,
  java-access-bridge-1.24.2.ebuild, java-access-bridge-1.26.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  19 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org>
  java-access-bridge-1.6.0.ebuild, java-access-bridge-1.6.0-r2.ebuild,
  java-access-bridge-1.24.2.ebuild, java-access-bridge-1.26.0.ebuild:
  Fix slot dep on at-spi

  22 Mar 2011; Brent Baude <ranger@gentoo.org>
  java-access-bridge-1.26.0.ebuild:
  Marking java-access-bridge-1.26.0 ppc stable for bug 353436

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  java-access-bridge-1.26.0.ebuild:
  ppc64 stable wrt #353436

  24 Feb 2011; Thomas Kahle <tomka@gentoo.org>
  java-access-bridge-1.26.0.ebuild:
  x86 stable per bug 353436

  23 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  java-access-bridge-1.26.0.ebuild:
  Stable on amd64 wrt bug #353436

  26 Jan 2011; Pacho Ramos <pacho@gentoo.org> java-access-bridge-1.26.0.ebuild:
  x11-apps/xprop is needed as noticed by Flameeyes in bug #318149.

*java-access-bridge-1.26.0 (28 Mar 2009)

  28 Mar 2009; Serkan Kaba <serkan@gentoo.org>
  +java-access-bridge-1.26.0.ebuild:
  Version bump.

*java-access-bridge-1.24.2 (15 Feb 2009)
*java-access-bridge-1.6.0-r2 (15 Feb 2009)

  15 Feb 2009; Serkan Kaba <serkan@gentoo.org>
  +files/java-access-bridge-1.6.0-missingclasses.patch, metadata.xml,
  java-access-bridge-1.6.0.ebuild, -java-access-bridge-1.6.0-r1.ebuild,